--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "smart-brain-app",
   "main": "script.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
